<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
    >

    <ScrollView
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_normal_margin"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/road_id_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/road_id"
                    style="@style/InputEditText.OneLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/please_type_road_id"
                    android:hint="@string/please_type_road_id"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    tools:ignore="UnusedAttribute"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/button_request"
                style="@style/ButtonNormal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_normal_margin"
                android:text="@string/submit_your_request"/>

            <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/activity_normal_margin"/>

            <android.support.v7.widget.CardView
                android:id="@+id/result_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_normal_margin"
                android:padding="@dimen/activity_small_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="@dimen/activity_very_small_margin">

                        <TextView
                            style="@style/Install.Widget.Basic.Text"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/display_name"/>

                        <TextView
                            android:id="@+id/display_name"
                            style="@style/Install.Widget.Basic.Text"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/activity_very_small_margin"
                            android:layout_marginLeft="@dimen/activity_very_small_margin"
                            android:layout_weight="2"
                            tools:text="@string/name"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="@dimen/activity_very_small_margin">

                        <TextView
                            style="@style/Install.Widget.Basic.Text"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/road_status"/>

                        <TextView
                            android:id="@+id/status"
                            style="@style/Install.Widget.Basic.Text"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/activity_very_small_margin"
                            android:layout_marginLeft="@dimen/activity_very_small_margin"
                            android:layout_weight="2"
                            tools:text="@string/status"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="@dimen/activity_very_small_margin">

                        <TextView
                            style="@style/Install.Widget.Basic.Text"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/road_status_description"/>

                        <TextView
                            android:id="@+id/status_description"
                            style="@style/Install.Widget.Basic.Text"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/activity_very_small_margin"
                            android:layout_marginLeft="@dimen/activity_very_small_margin"
                            android:layout_weight="2"
                            tools:text="@string/description"/>

                    </LinearLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/error_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_normal_margin"
                android:padding="@dimen/activity_small_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/activity_very_small_margin">

                    <TextView
                        style="@style/Install.Widget.Basic.Text.Error"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/an_error_occurred"/>

                    <TextView
                        android:id="@+id/error_text"
                        style="@style/Install.Widget.Basic.Text.Error"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/activity_very_small_margin"
                        android:layout_marginLeft="@dimen/activity_very_small_margin"
                        android:layout_weight="2"
                        tools:text="@string/error"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>

</layout>